# crescent-credentials

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  NOTICE.md  README.md  TODO.txt  azure-pipeline.yml  build_all.sh  clippy_command.sh  package-lock.json
.github/workflows/: CI.yml  docker_ci.yml
circuit_setup/: README.md
circuit_setup/circuits/: functions.circom  match_claim.circom
circuit_setup/circuits-mdl/: main.circom  main_birth_date.circom.template  main_header_es256.circom.template  match_claim.circom
circuit_setup/circuits-mdl/nope/crypto/: sha256.circom
circuit_setup/circuits/utils/: jwt.circom  sha.circom
circuit_setup/inputs/mdl1/: claims.json  config.json  device_private_key.pem  issuer_certs.pem  issuer_key.pem  mdl.cbor
circuit_setup/inputs/rs256-sd/: config.json  proof_spec.json
circuit_setup/mdl-tools/: Cargo.toml
circuit_setup/scripts/: crescent_helper.py  gen_mdl_device_key.sh  gen_x509_cert_chain.sh  precompEcdsa.mjs  prepare_mdl_prover.py  prepare_mdl_setup.py  prepare_setup.py  run_setup.sh
creds/: Cargo.toml
creds/benches/: ecc_bench.rs  proof_benchmark.rs  range_bench.rs
creds/examples/: demo-sd.rs  demo-with-spartan.rs  demo.rs
creds/src/: daystamp.rs  device.rs  dlog.rs  groth16rand.rs  lib.rs  main.rs  prep_inputs.rs  rangeproof.rs  structs.rs  utils.rs  wasm_lib.rs
creds/src/device_binding/: device.rs
creds/src/device_binding/ecdsa-pop/: Cargo.toml
creds/src/device_binding/ecdsa-pop/src/: lib.rs
creds/src/dleq/: mod.rs
creds/src/dlog/: mod.rs
creds/src/groth16rand/: mod.rs
creds/src/rangeproof/: mod.rs
creds/src/structs/: demo.rs  mod.rs  named_domain.rs
creds/tests/: range_test.rs
ecdsa-pop/: Cargo.toml
ecdsa-pop/src/: poseidon.rs
forks/Spartan-t256/: Cargo.toml
forks/Spartan-t256/circ_fields/: Cargo.toml
forks/Spartan-t256/circ_fields/src/: ff_field.rs  int_field.rs  lib.rs  size.rs  test.rs
forks/ark-circom/: README.md
forks/ark-circom/test-vectors/: package-lock.json  package.json
forks/ark-poly-commit/src/: lib.rs
forks/circom-compat/: Cargo.toml
forks/circom-compat/test-vectors/: package-lock.json  package.json
sample/: Dockerfile  README.md  clean-sample.sh  sample.html  setup-sample.sh
sample/client/: .env  .gitignore  README.md  SUPPORT.md  eslint.config.js  package-lock.json  package.json  rollup.config.js  setup_client.sh  tsconfig.json  wasmCheck.js
sample/client/manifests/: manifest.chrome.json  manifest.firefox.json
sample/client/public/: options.html  popup.css  popup.html
sample/client/src/: background.ts  cards.ts  cbor.ts  clientHelper.ts  config.ts  constants.ts  content.ts  cred.ts  indexdb.ts  indexeddb.ts  jwt.ts  listen copy.ts  listen.ts  offscreen.ts  options.ts  popup.ts  schema.ts  types.d.ts  utils.ts  verifier.ts  wallet.ts
sample/client/src/components/: card.ts  collapsible.ts  walletItem.ts
sample/client_helper/: Cargo.toml  README.md  setup_client_helper.sh
sample/client_helper/src/: main.rs
sample/client_helper/static/: index.html
sample/issuer/: Cargo.toml  README.md  Rocket.toml
sample/issuer/scripts/: generate-jwks.js  setup-issuer.sh  update-rocket-toml.js
sample/issuer/src/: main.rs
sample/issuer/templates/: login.html.tera  welcome.html.tera
sample/setup_service/: Cargo.toml  README.md
sample/setup_service/scripts/: generate-dummy-jwt.sh  setup-service.sh
sample/setup_service/src/: common.rs  main.rs
sample/verifier/: Cargo.toml  README.md  Rocket.toml  setup_verifier.sh
sample/verifier/src/: main.rs
sample/verifier/static/css/: site1_style.css  site2_style.css  style.css
sample/verifier/templates/: login.html.tera  resource.html.tera  resource_over18.html.tera  signup1.html.tera  signup2.html.tera
setup/: .gitignore  Cargo.toml  README.md
setup/circom/: main_header_es256k.circom.template  main_header_es256k_hashonly.circom.template  main_header_rs256.circom.template  main_header_rs256_nohash.circom.template  match_claim.circom  predicates.circom
setup/circom-mdl/: README.md  circomlib
setup/circom/circom-ecdsa-circuits/: bigint.circom
setup/circom/ecdsa-native/: README.md  ecdsa_native.circom
setup/circom/ecdsa-native/circom-secp256k1/: README.md  add.circom  mul.circom
setup/circom/utils/: base64.circom  bigint.circom  fp.circom  jwt.circom  regex_helpers.circom  sha.circom  utils.circom
setup/circom/utils_ecdsa/: jwt_ecdsa.circom  utils.circom
setup/inputs/rs256/: config.json  issuer.prv  issuer.pub  token.jwt  token2.jwt
setup/scripts/: copy_circom_files.sh  crescent_helper.py  jwk_gen.py  jwt_sign.py  jwt_tool.py  prepare_mdl_prover.py  prepare_prover.py  prepare_setup.py  prepare_verifier.py  run_prover.sh  run_setup.sh  run_verifier.sh  test.py
setup/src/: circuit.rs  file.rs  lib.rs  main.rs  reader.rs  utils.rs
spartan-ecdsa/: Cargo.toml  README.md
spartan-ecdsa/src/: commitment.rs  ecc.rs  ecdsa.rs  lib.rs  poseidon.rs  utils.rs
spartan-ecdsa/src/nonnative/: bignat.rs  bignat_utils.rs  mod.rs
