[package]
name = "crescent"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan2 = { git = 'https://github.com/microsoft/Spartan2.git', rev="63f5636" }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
pasta_curves = { version = "0.5.1", features = ["repr-c", "serde"] }
hex = "0.4.3"
rand = { version = "0.8.4", features = ["std"] }
num-bigint = "0.4.3"
num-traits = "0.2.14"
serde = { version = "1.0.127", features = ["derive"] }
ark-std = "0.4.0"
bincode = { version = "1.3.3", default-features = false }
anyhow = "1.0.40"
ff = { version = "0.13", features = ["derive"]}
hex-literal = "0.4.1"
itertools = "0.11.0"
clap = { version = "3.1.6", features = ["derive"] }
structopt = "0.3"
lz4_flex = { version = "0.11", default-features = false }

bellpepper-core = { version="0.2.0", default-features = false }
bellpepper = { version="0.2.0", default-features = false }

[features]
default = []
print-trace = ["ark-std/print-trace"]
