[package]
name = "spartan-ecdsa"
version = "0.1.0"
authors = ["Srinath Setty <srinath@microsoft.com>", "Greg Zaverucha <gregz@microsoft.com>"]
edition = "2021"
description = "proving knowledge of ECDSA sigantures with Spartan2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spartan2 = { git = 'https://github.com/microsoft/Spartan2.git', rev="63f5636" }
bellpepper-core = { version="0.2.0", default-features = false }
bellpepper = { version="0.2.0", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
halo2curves = { version = "0.4.0", features = ["derive_serde"] }
hex = "0.4.3"
sha2 = "0.10.7"
num-bigint = {version="0.4.3", features = ["rand"]}
num-traits = "0.2.14"
thiserror = "1.0.39"
base64-url = {version = "2.0.0", default-features = false}
ark-std = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = ">=0.8.5"
byteorder = "1.4.3"

#neptune = { version = "13.0.0", default-features = false } #for Poseidon.  v13 depends on bellpepper 4.0, but spartan must use 2.0
#neptune = { version = "10.0.0", default-features = false }  #for Poseidon. v10 depends on bellperson, also incmopatible with Spartan
neptune = {path = './neptune', default-features = false}   # Our fork of neptune that works with bellpepper 2.0
generic-array = "1.0.0"

[features]
print-trace = ["ark-std/print-trace"]

[dev-dependencies]
num-format = { version = "0.4.3" }

