[package]
name = "crescent-sample-client-helper"
version = "0.1.0"
edition = "2021"
default-run = "crescent-sample-client-helper"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
ureq = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
fs_extra = "1.2"
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
crescent = {path="../../creds"}

[profile.dev.package."*"]
opt-level = 3               # optimize dependencies, even in dev builds
debug-assertions = false    # We need this to work around a bug in Wasmer