[package]
name = "crescent-sample-issuer"
version = "0.1.0"
edition = "2021"
default-run = "crescent-sample-issuer"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.1"
chrono = "0.4"
pem = "0.8"
rsa = "0.6"
base64 = "0.21"
serde_json = "1.0"